# the-crunchy-one

./: Cargo.toml  README.md  commands.json
src/: main.rs
src/bot/commands/: color.rs  mod.rs
src/bot/commands/currency/: mod.rs
src/bot/util/: commandsconfig.rs  mod.rs
