[package]
name = "the_crunchy_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
version = "0.10.10"